@@ -18,7 +18,6 @@ dependencies {
     implementation project(':common')
 
     implementation 'commons-codec:commons-codec:1.16.0'
-    implementation 'org.xerial.snappy:snappy-java:1.1.9.1'
     implementation 'org.apache.avro:avro:1.11.0'
     // https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-hdfs-client
     implementation 'org.apache.hadoop:hadoop-client:2.10.2'
@@ -33,10 +32,6 @@ dependencies {
     implementation 'org.glassfish.jersey.media:jersey-media-json-binding:3.1.3'
     implementation 'org.glassfish.jersey.security:oauth2-client:3.1.3'
 
-    // https://mvnrepository.com/artifact/software.amazon.awssdk/s3
-    implementation 'software.amazon.awssdk:s3:2.20.140'
-    // https://mvnrepository.com/artifact/software.amazon.awssdk/glacier
-    implementation 'software.amazon.awssdk:glacier:2.20.140'
     implementation 'software.amazon.awssdk:sns:2.20.140'
     implementation 'software.amazon.awssdk:sqs:2.20.140'
 
@@ -52,7 +47,6 @@ dependencies {
     // https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc
     implementation 'com.microsoft.sqlserver:mssql-jdbc:12.2.0.jre11'
     implementation 'com.azure:azure-identity:1.10.0'
-    implementation 'com.azure:azure-storage-blob:12.21.1'
     implementation 'com.azure:azure-data-tables:12.3.9'
     implementation 'com.azure:azure-messaging-servicebus:7.14.3'
     implementation 'io.netty:netty-tcnative:2.0.59.Final'
@@ -75,7 +69,6 @@ dependencies {
     implementation 'org.apache.tika:tika-langdetect:2.9.1'
     implementation 'org.apache.tika:tika-parsers-standard-package:2.9.1'
     implementation 'net.lingala.zip4j:zip4j:2.11.5'
-    implementation 'org.apache.pdfbox:pdfbox:3.0.0'
 
     implementation 'org.apache.lucene:lucene-core:9.7.0'
     implementation 'org.apache.lucene:lucene-analysis-common:9.7.0'
@@ -85,16 +78,4 @@ dependencies {
     implementation 'org.eclipse.jgit:org.eclipse.jgit:6.7.0.202309050840-r'
     implementation 'org.eclipse.jgit:org.eclipse.jgit.ssh.apache:6.7.0.202309050840-r'
     implementation 'org.eclipse.jgit:org.eclipse.jgit.gpg.bc:6.7.0.202309050840-r'
-}
-
-test {
-    jvmArgs('--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED',
-            '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED',
-            '--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED',
-            '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
-            '--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED',
-            '--add-opens=java.base/java.lang=ALL-UNNAMED',
-            '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
-            '--add-opens=java.base/java.io=ALL-UNNAMED',
-            '--add-opens=java.base/java.util=ALL-UNNAMED')
 }
