@@ -1,19 +1,53 @@
-plugins {
-    id 'java'
-}
-
-group = 'ai.sapper.cdc'
-version = '1.0-SNAPSHOT'
-
-repositories {
-    mavenCentral()
+configurations.all {
+    exclude module: "logback-classic"
+    exclude module: "log4j-to-slf4j"
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        if (details.requested.name == 'log4j') {
+            details.useTarget "org.apache.logging.log4j:log4j-slf4j18-impl:2.18.0"
+        }
+        if (details.requested.name == 'avro') {
+            details.useTarget "org.apache.avro:avro:1.11.0"
+        }
+        if (details.requested.name == 'commons-codec') {
+            details.useTarget 'commons-codec:commons-codec:1.16.0'
+        }
+    }
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation project(':common')
+    implementation project(':core')
+
+    implementation 'org.xerial.snappy:snappy-java:1.1.9.1'
+    implementation 'org.apache.pdfbox:pdfbox:3.0.0'
+    implementation 'net.lingala.zip4j:zip4j:2.11.5'
+
+    // https://mvnrepository.com/artifact/software.amazon.awssdk/s3
+    implementation 'software.amazon.awssdk:s3:2.20.140'
+    // https://mvnrepository.com/artifact/software.amazon.awssdk/glacier
+    implementation 'software.amazon.awssdk:glacier:2.20.140'
+
+    implementation 'com.azure:azure-identity:1.10.0'
+    implementation 'com.azure:azure-storage-blob:12.21.1'
+
+    implementation 'net.openhft:chronicle-bytes:2.24ea15'
+
+    implementation 'org.apache.commons:commons-vfs2:2.9.0'
+
+    implementation 'org.apache.lucene:lucene-core:9.7.0'
+    implementation 'org.apache.lucene:lucene-analysis-common:9.7.0'
+    implementation 'org.apache.solr:solr-solrj:9.4.0'
+
 }
 
 test {
-    useJUnitPlatform()
+    jvmArgs('--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED',
+            '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED',
+            '--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED',
+            '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+            '--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED',
+            '--add-opens=java.base/java.lang=ALL-UNNAMED',
+            '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+            '--add-opens=java.base/java.io=ALL-UNNAMED',
+            '--add-opens=java.base/java.util=ALL-UNNAMED')
 }
